kubecd/cli/e2e/dupe-ingress/environments.yaml
helmRepos: []

clusters:
  - name: test
    provider:
      minikube: {}

environments:
  - name: test
    clusterName: test
    releasesFiles:
      - test-dupe-ingress.yaml
