kubecd/cli/e2e/dupe-ingress/test-dupe-ingress.yaml
releases:
  - name: ingress1
    resourceFiles:
      - ingress1.yaml
  - name: ingress2
    resourceFiles:
      - ingress2.yaml
